--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  margin-left: 130px;
-  margin-right: 80px;
+  /* margin-left: 130px;
+  margin-right: 80px; */
 }
 
 .App-logo {
