Created countdown watch

--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -12,3 +12,14 @@
   display: flex; 
   justify-content: space-evenly;
 }
+
+.timer {
+  clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+  width: 15%;
+  margin: 20px 0;
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+}
