--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -5,11 +5,11 @@
   z-index: 10007;
   margin: 0;
   padding: 0;
-  background-color: blue;;
+  background-color: blue;
 }
 
 .answers {
-  display: flex; 
+  display: flex;
   justify-content: space-evenly;
 }
 
